ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - gl-basecamp.dynv6.net
    secretName: app-tls
  rules:
   - host: gl-basecamp.dynv6.net
     http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: my-cluster-ip
                port: 
                  number: 80
